优化了部分接口