@@ -9,17 +9,21 @@ import org.sacc.SaccHome.mbg.mapper.FileMapper;
 import org.sacc.SaccHome.mbg.model.File;
 import org.sacc.SaccHome.mbg.model.FileTask;
 import org.sacc.SaccHome.service.FileTaskService;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 import org.xmlpull.v1.XmlPullParserException;
 
 import javax.annotation.Resource;
-import javax.crypto.*;
 import javax.servlet.http.HttpServletResponse;
-import java.io.*;
+import java.io.BufferedOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.security.InvalidAlgorithmParameterException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.time.LocalDateTime;
@@ -37,7 +41,7 @@ public class FileController {
     private FileMapper fileMapper;
 
 
-    @PostMapping(value = "/uploadShareFile")
+    @PostMapping("/uploadShareFile")
     public CommonResult<String> Upload(MultipartFile file) throws XmlPullParserException, NoSuchAlgorithmException, IOException, InvalidKeyException {
         String bucketname = "share";
         try {
@@ -50,7 +54,7 @@ public class FileController {
                 System.out.println("文件夹还没存在");
                 minioClient.makeBucket(bucketname);
             }
-            minioClient.putObject(bucketname, file.getOriginalFilename(), file.getInputStream(), file.getInputStream().available(), "application/octet-stream");
+            minioClient.putObject(bucketname, file.getName(), file.getInputStream(), file.getInputStream().available(), "application/octet-stream");
             return CommonResult.success("ok");
         }   catch(MinioException e) {
             System.out.println("Error occurred: " + e);
@@ -69,21 +73,22 @@ public class FileController {
         }
 
         else {
-            Map<String, String> map = new HashMap<String, String>();
+            Map<String, String> map = new HashMap<>();
             url.add(map);
             Iterable<Result<Item>> results =
                     minioClient.listObjects(bucketname);
             for (Result<Item> result : results) {
                 Item item = result.get();
-                map.put(item.objectName(), "http://127.0.0.1:8080" + "/download/" + "?"+"bucketname" + "=" + bucketname +"&" + "filename"+ "=" +URLEncoder.encode(item.objectName(), StandardCharsets.UTF_8));
+                map.put("filename",item.objectName());
+                map.put("url","http://116.62.110.191:8888" + "/download/" + "?"+"bucketname" + "=" + bucketname +"&" + "filename"+ "=" +URLEncoder.encode(item.objectName(), StandardCharsets.UTF_8));
             }
             System.out.println(url);
             return CommonResult.success(url);
         }
     }
 
-    @GetMapping(value = "/deleteShareFile")
-    public CommonResult<String> deleteShareFile(@RequestParam("filename") String filename) throws InvalidPortException, InvalidEndpointException, InvalidBucketNameException, InsufficientDataException, XmlPullParserException, ErrorResponseException, NoSuchAlgorithmException, IOException, NoResponseException, InvalidKeyException, InternalException {
+    @GetMapping("/deleteShareFile")
+    public CommonResult<String> deleteShareFile(@RequestParam("filename") String filename) throws XmlPullParserException, NoSuchAlgorithmException, IOException, InvalidKeyException {
         String bucketname = "share";
         try {
             MinioClient minioClient = new MinioClient("http://platform.sacc.fit", "minioadmin", "minioadmin");
@@ -100,7 +105,7 @@ public class FileController {
     }
 
     @PostMapping("/upload")
-    public CommonResult<File> upload(MultipartFile file,@RequestParam String bucketname,@RequestParam Integer fileTaskId)throws XmlPullParserException, NoSuchAlgorithmException, IOException, InvalidKeyException {
+    public CommonResult<Object> upload(MultipartFile file,@RequestParam String bucketname,@RequestParam Integer fileTaskId)throws XmlPullParserException, NoSuchAlgorithmException, IOException, InvalidKeyException {
         FileTask fileTask = fileTaskService.getFileTask(fileTaskId);
         String fileName = file.getOriginalFilename();
         assert fileName != null;
@@ -125,34 +130,35 @@ public class FileController {
             }
             minioClient.putObject(bucketname, newFileName.toString(), file.getInputStream(), file.getInputStream().available(), "application/octet-stream");
             System.out.println("ok");
+            String url = "http://116.62.110.191:8888" + "/download/" + "?"+"bucketname" + "=" + bucketname +"&" + "filename"+ "=" +URLEncoder.encode(newFileName.toString());
+            File f = new File();
+            f.setPath(url);
+            f.setFileName(newFileName.toString());
+            f.setFileTaskId(fileTaskId);
+            f.setCreatedAt(LocalDateTime.now());
+            f.setUpdatedAt(LocalDateTime.now());
+            fileMapper.insert(f);
+            return CommonResult.success(f);
         }   catch(MinioException e) {
             System.out.println("Error occurred: " + e);
+            return CommonResult.failed("Error occurred: " + e);
         }
-        String url = "http://127.0.0.1:8080" + "/download/" + "?"+"bucketname" + "=" + bucketname +"&" + "filename"+ "=" +URLEncoder.encode(newFileName.toString());
-        File f = new File();
-        f.setPath(url);
-        f.setFileName(newFileName.toString());
-        f.setFileTaskId(fileTaskId);
-        f.setCreatedAt(LocalDateTime.now());
-        f.setUpdatedAt(LocalDateTime.now());
-        fileMapper.insert(f);
-        return CommonResult.success(f);
     }
     @GetMapping(value = "/download")
-    public void Download(@RequestParam("filename") String filename, @RequestParam("bucketname") String bucketname, HttpServletResponse resp) throws InvalidBucketNameException, InsufficientDataException, XmlPullParserException, ErrorResponseException, NoSuchAlgorithmException, IOException, NoResponseException, InvalidKeyException, InternalException, InvalidArgumentException {
+    public CommonResult<String> Download(@RequestParam("filename") String filename, @RequestParam("bucketname") String bucketname, HttpServletResponse resp) throws XmlPullParserException, NoSuchAlgorithmException, IOException, InvalidKeyException {
         try {
             MinioClient minioClient = new MinioClient("http://platform.sacc.fit", "minioadmin", "minioadmin");
             if (minioClient.bucketExists(bucketname)) {
                 //得到bucket里test中filename的文件流
-                InputStream in = minioClient.getObject(bucketname, filename, 0l);
+                InputStream in = minioClient.getObject(bucketname, filename, 0L);
                 //读文件流
                 byte[] buf = new byte[16384];
-                int bytesRead = 0;
+                int bytesRead;
                 resp.reset();
                 //Content-disposition 是 MIME 协议的扩展，MIME 协议指示 MIME 用户代理如何显示附加的文件。
                 // Content-disposition其实可以控制用户请求所得的内容存为一个文件的时候提供一个默认的文件名，
                 // 文件直接在浏览器上显示或者在访问时弹出文件下载对话框。
-                resp.setHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(filename, "UTF-8"));
+                resp.setHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(filename, StandardCharsets.UTF_8));
                 resp.setContentType("application/x-msdownload");
                 resp.setCharacterEncoding("utf-8");
                 OutputStream out = new BufferedOutputStream(resp.getOutputStream());
@@ -162,22 +168,28 @@ public class FileController {
                 out.close();
                 in.close();
                 System.out.println("true");
-            } else
+                return CommonResult.success("true");
+            } else{
                 System.out.println("false");
+                return CommonResult.failed("不存在的bucketname");
+            }
         }catch (MinioException e) {
             System.out.println("Error occurred: " + e);
+            return CommonResult.failed("Error occurred: " + e);
         }
     }
     @GetMapping(value = "/delete")
-    public void Delete(@RequestParam("filename") String filename, @RequestParam("bucketname") String bucketname) throws InvalidPortException, InvalidEndpointException, InvalidBucketNameException, InsufficientDataException, XmlPullParserException, ErrorResponseException, NoSuchAlgorithmException, IOException, NoResponseException, InvalidKeyException, InternalException {
+    public CommonResult<String> Delete(@RequestParam("filename") String filename, @RequestParam("bucketname") String bucketname) throws XmlPullParserException, NoSuchAlgorithmException, IOException, InvalidKeyException {
         try {
             MinioClient minioClient = new MinioClient("http://platform.sacc.fit", "minioadmin", "minioadmin");
             minioClient.statObject(bucketname, filename);
             minioClient.removeObject(bucketname, filename);
             System.out.println("successfully removed " + bucketname + "/" + filename);
+            return CommonResult.success("successfully removed " + bucketname + "/" + filename);
         }
         catch (MinioException e) {
             System.out.println("Error occurred: " + e);
+            return CommonResult.failed("Error occurred: " + e);
         }
 
     }
